--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
           <targetTests>
             <param>com.acme.edu*</param>
           </targetTests>
+          <mutators>
+            <mutator>ALL</mutator>
+          </mutators>
+          <outputFormats>
+            <outputFormat>HTML</outputFormat>
+            <outputFormat>XML</outputFormat>
+          </outputFormats>
         </configuration>
         <executions>
           <execution>
